[package]
name = "network-stalker"
description = "Tries to reach hosts on the network and reports their online status to MQTT"
version = "0.4.4"
license = "MIT"
repository = "https://github.com/EdJoPaTo/network-stalker"
authors = ["EdJoPaTo <network-stalker-rust@edjopato.de>"]
edition = "2018"
rust-version = "1.52.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = "2"

[dependencies]
chrono = "0.4"
rumqttc = "0.9"

[dependencies.clap]
version = "2"
features = ["wrap_help"]
