[package]
name = "network-stalker"
description = "Tries to reach hosts on the network and reports their online status to MQTT"
version = "0.5.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/network-stalker"
authors = ["EdJoPaTo <network-stalker-rust@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "3", features = ["cargo", "env"] }
clap_complete = "3"

[dependencies]
clap = { version = "3", features = ["cargo", "env", "wrap_help"] }
chrono = "0.4"
rumqttc = "0.20"
